need to do mobile

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -40,11 +40,11 @@
       <article class="post">
         <h1 class="post-title"><a href="https://twitter.com/jomrcr" target="_blank" class="colorful">Hey folks, I'm @jomrcr.</a></h1>
 
-        <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
+        <p>I study <b>mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
-        <p>In the Fall I'll be a <b class="colorful">data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a <b class="colorful">web developer</b> at Tagged (ifwe), and Bazaarvoice.</p>
+        <p>In the Fall I'll be a <b>data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a <b>web developer</b> at Tagged (ifwe), and Bazaarvoice.</p>
 
-        <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
+        <p>My studies and internships have taken me around the <b>world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
 
         <div class="map-container">
           <span class="dot colorful seattle"></span>
