--- a/src/index.hbs
+++ b/src/index.hbs
@@ -38,45 +38,45 @@
     <section class="container">
 
       <article class="post">
-        <h1 class="post-title"><a href="https://twitter.com/jomrcr" target="_blank" class="colorful">Hey folks, I'm @jomrcr.</a></h1>
+        <h1 class="post-title"><a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">Hey folks, I'm @jomrcr.</a></h1>
 
-        <p>I study <b>mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
+        <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
-        <p>In the Fall I'll be a <b>data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a <b>web developer</b> at Tagged (ifwe), and Bazaarvoice.</p>
+        <p>In the Fall I'll be a <b class="colorful">data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a <b class="colorful">web developer</b> at Tagged (ifwe), and Bazaarvoice.</p>
 
-        <p>My studies and internships have taken me around the <b>world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
+        <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
 
         <div class="map-container">
-          <span class="dot colorful seattle"></span>
-          <span class="dot colorful hk"></span>
-          <span class="dot colorful nyc"></span>
-          <span class="dot colorful sf"></span>
-          <span class="dot colorful austin"></span>
-          <span class="dot colorful waterloo"></span>
+          <span class="dot rainbow seattle"></span>
+          <span class="dot rainbow hk"></span>
+          <span class="dot rainbow nyc"></span>
+          <span class="dot rainbow sf"></span>
+          <span class="dot rainbow austin"></span>
+          <span class="dot rainbow waterloo"></span>
           {{> map}}
         </div>
 
         <p>I love travelling to new places, trying new things, and making new friends.</p>
 
-        <h2><a href="!!!" target="_blank" class="colorful">Come say hello :)</a></h2>
+        <h2><a href="mailto:jomrcr@gmail.com?subject=Hello!" class="rainbow">Come say hello :)</a></h2>
 
         <div class="date-img">
           <h2 class="date">Winter 2015 - Seattle</h2>
-          <div class="underline colorful"></div>
+          <div class="underline rainbow"></div>
           <img src="http://www.flinnferguson.com/wp-content/uploads/2013/03/COA_Seattle.jpg" alt="Seattle">
         </div>
 
         <p>I was interning at Microsoft as a program manager on the Xbox Live Services team. While there I helped design the Xbox Live experience of community managers and other high frequency users.</p>
 
         <ul>
-          <li><a href="http://jomrcr.svbtle.com/notes-the-toyota-way" target="_blank" class="colorful">Business</a></li>
-          <li><a href="http://jomrcr.svbtle.com/notes-the-design-of-everyday-things" target="_blank" class="colorful">Design</a></li>
-          <li><a href="https://github.com/joemercer/tether" target="_blank" class="colorful">Family</a></li>
+          <li><a href="http://jomrcr.svbtle.com/notes-the-toyota-way" target="_blank" class="rainbow">Business</a></li>
+          <li><a href="http://jomrcr.svbtle.com/notes-the-design-of-everyday-things" target="_blank" class="rainbow">Design</a></li>
+          <li><a href="https://github.com/joemercer/tether" target="_blank" class="rainbow">Family</a></li>
         </ul>
 
         <div class="date-img">
           <h2 class="date">Fall 2014 - Hong Kong</h2>
-          <div class="underline colorful"></div>
+          <div class="underline rainbow"></div>
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/HKUST_Campus_view_taken_in_2011.jpg" alt="Hong Kong">
         </div>
 
@@ -84,55 +84,55 @@
 
         <ul>
           <li>Iced Milk Tea</li>
-          <li><a href="http://jomrcr.svbtle.com/hanabi-strategy" target="_blank" class="colorful">Hanabi</a></li>
-          <li><a href="http://jomrcr.svbtle.com/notes-lean-analytics" target="_blank" class="colorful">Analytics</a></li>
+          <li><a href="http://jomrcr.svbtle.com/hanabi-strategy" target="_blank" class="rainbow">Hanabi</a></li>
+          <li><a href="http://jomrcr.svbtle.com/notes-lean-analytics" target="_blank" class="rainbow">Analytics</a></li>
         </ul>
 
         <div class="date-img">
           <h2 class="date darkgrey">Summer 2014 - NYC</h2>
-          <div class="underline colorful"></div>
+          <div class="underline rainbow"></div>
           <img src="http://www.urbansplatter.com/wp-content/uploads/2013/11/nyc001.jpg" alt="NYC">
         </div>
 
         <p>I was interning at a tech startup in Chelsea called Noom that makes health conscious mobile apps. I was helping redesign the experience behind their core offering, a premium weight loss app for iOS and Android.</p>
 
         <ul>
-          <li><a href="http://jomrcr.svbtle.com/product-debt" target="_blank" class="colorful">Rapid prototyping</a></li>
+          <li><a href="http://jomrcr.svbtle.com/product-debt" target="_blank" class="rainbow">Rapid prototyping</a></li>
           <li>UX Research</li>
-          <li><a href="http://jomrcr.svbtle.com/notes-the-lean-startup" target="_blank" class="colorful">Lean Startups</a></li>
+          <li><a href="http://jomrcr.svbtle.com/notes-the-lean-startup" target="_blank" class="rainbow">Lean Startups</a></li>
         </ul>
 
         <div class="date-img">
           <h2 class="date">Fall 2013 - SF</h2>
-          <div class="underline colorful"></div>
+          <div class="underline rainbow"></div>
           <img src="https://a2.muscache.com/locations/uploads/city/hero/20/0_4195_350_2532_hero_USA_SF_Skylines_05_mb.jpg" alt="SF">
         </div>
 
         <p>I was interning downtown as a web developer at the social networking company ifwe (formerly called Tagged). I focused on the front-end, helping build new features for Chat and Activity Feed.</p>
 
         <ul>
-          <li><a href="http://jomrcr.svbtle.com/frankenblog" target="_blank" class="colorful">Blogging</a></li>
+          <li><a href="http://jomrcr.svbtle.com/frankenblog" target="_blank" class="rainbow">Blogging</a></li>
           <li>Ukulele</li>
-          <li><a href="https://github.com/joemercer/golden" target="_blank" class="colorful">CSS</a></li>
+          <li><a href="https://github.com/joemercer/golden" target="_blank" class="rainbow">CSS</a></li>
         </ul>
 
         <div class="date-img">
           <h2 class="date">Winter 2013 - Austin</h2>
-          <div class="underline colorful"></div>
+          <div class="underline rainbow"></div>
           <img src="http://www.tcainstitute.com/Images/iStock_000003243029LakeAustin.jpg" alt="Austin">
         </div>
 
         <p>My first internship was as a software engineer at Bazaarvoice, a SaaS company providing ratings and reviews for e-commerce websites. I was helping rebuild their back-end in Node.js, and ironing out accessibility requirements on the front-end.</p>
 
         <ul>
-          <li><a href="https://github.com/joemercer/JavaScript-Interview-Prep" target="_blank" class="colorful">JavaScript</a></li>
+          <li><a href="https://github.com/joemercer/JavaScript-Interview-Prep" target="_blank" class="rainbow">JavaScript</a></li>
           <li>Paddleboarding</li>
           <li>SXSW</li>
         </ul>
 
         <div class="date-img">
           <h2 class="date">Fall 2011 - Waterloo</h2>
-          <div class="underline colorful"></div>
+          <div class="underline rainbow"></div>
           <img src="http://www.doublespacephoto.com/media/original/KPMB%20toronto%20architectural%20photography%20amanda%20large%20younes%20bounhar%20QNC%20Waterloo-1.jpg" alt="Waterloo">
         </div>
 
@@ -140,8 +140,8 @@
 
         <ul>
           <li>Homework</li>
-          <li><a href="https://github.com/joemercer/waitless" target="_blank" class="colorful">Hackathons</a></li>
-          <li><a href="http://jomrcr.svbtle.com/new-music-roundup-511" target="_blank" class="colorful">mathNEWS</a></li>
+          <li><a href="https://github.com/joemercer/waitless" target="_blank" class="rainbow">Hackathons</a></li>
+          <li><a href="http://jomrcr.svbtle.com/new-music-roundup-511" target="_blank" class="rainbow">mathNEWS</a></li>
         </ul>
 
       </article>
