--- a/src/index.hbs
+++ b/src/index.hbs
@@ -60,7 +60,7 @@
 
         <h2><a href="mailto:jomrcr@gmail.com?subject=Hello!" class="rainbow">Come say hello :)</a></h2>
 
-        <div class="date-img">
+        <div class="seattle-header date-img">
           <h2 class="date">Winter 2015 - Seattle</h2>
           <div class="underline rainbow"></div>
           <img src="http://www.flinnferguson.com/wp-content/uploads/2013/03/COA_Seattle.jpg" alt="Seattle">
@@ -74,7 +74,7 @@
           <li><a href="https://github.com/joemercer/tether" target="_blank" class="rainbow">Family</a></li>
         </ul>
 
-        <div class="date-img">
+        <div class="hk-header date-img">
           <h2 class="date">Fall 2014 - Hong Kong</h2>
           <div class="underline rainbow"></div>
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/HKUST_Campus_view_taken_in_2011.jpg" alt="Hong Kong">
@@ -88,7 +88,7 @@
           <li><a href="http://jomrcr.svbtle.com/notes-lean-analytics" target="_blank" class="rainbow">Analytics</a></li>
         </ul>
 
-        <div class="date-img">
+        <div class="nyc-header date-img">
           <h2 class="date darkgrey">Summer 2014 - NYC</h2>
           <div class="underline rainbow"></div>
           <img src="http://www.urbansplatter.com/wp-content/uploads/2013/11/nyc001.jpg" alt="NYC">
@@ -102,7 +102,7 @@
           <li><a href="http://jomrcr.svbtle.com/notes-the-lean-startup" target="_blank" class="rainbow">Lean Startups</a></li>
         </ul>
 
-        <div class="date-img">
+        <div class="sf-header date-img">
           <h2 class="date">Fall 2013 - SF</h2>
           <div class="underline rainbow"></div>
           <img src="https://a2.muscache.com/locations/uploads/city/hero/20/0_4195_350_2532_hero_USA_SF_Skylines_05_mb.jpg" alt="SF">
@@ -116,7 +116,7 @@
           <li><a href="https://github.com/joemercer/golden" target="_blank" class="rainbow">CSS</a></li>
         </ul>
 
-        <div class="date-img">
+        <div class="austin-header date-img">
           <h2 class="date">Winter 2013 - Austin</h2>
           <div class="underline rainbow"></div>
           <img src="http://www.tcainstitute.com/Images/iStock_000003243029LakeAustin.jpg" alt="Austin">
@@ -130,7 +130,7 @@
           <li>SXSW</li>
         </ul>
 
-        <div class="date-img">
+        <div class="waterloo-header date-img">
           <h2 class="date">Fall 2011 - Waterloo</h2>
           <div class="underline rainbow"></div>
           <img src="http://www.doublespacephoto.com/media/original/KPMB%20toronto%20architectural%20photography%20amanda%20large%20younes%20bounhar%20QNC%20Waterloo-1.jpg" alt="Waterloo">
