--- a/src/index.hbs
+++ b/src/index.hbs
@@ -63,7 +63,7 @@
         <div class="seattle-header date-img">
           <h2 class="date">Winter 2015 - Seattle</h2>
           <div class="underline rainbow"></div>
-          <img src="http://www.flinnferguson.com/wp-content/uploads/2013/03/COA_Seattle.jpg" alt="Seattle">
+          <img class="lazy" data-src="images/seattle.jpg" src="images/blank.gif" alt="Seattle" />
         </div>
 
         <p>I was interning at Microsoft as a program manager on the Xbox Live Services team. While there I helped design the Xbox Live experience of community managers and other high frequency users.</p>
@@ -77,7 +77,7 @@
         <div class="hk-header date-img">
           <h2 class="date">Fall 2014 - Hong Kong</h2>
           <div class="underline rainbow"></div>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/HKUST_Campus_view_taken_in_2011.jpg" alt="Hong Kong">
+          <img class="lazy" data-src="images/hk.jpg" src="images/blank.gif" alt="Hong Kong">
         </div>
 
         <p>I was studying abroad at the Hong Kong University of Science and Technology, getting distracted by the panoramic vistas and mouthwatering dim sum.</p>
@@ -91,7 +91,7 @@
         <div class="nyc-header date-img">
           <h2 class="date darkgrey">Summer 2014 - NYC</h2>
           <div class="underline rainbow"></div>
-          <img src="http://www.urbansplatter.com/wp-content/uploads/2013/11/nyc001.jpg" alt="NYC">
+          <img class="lazy" data-src="images/nyc.jpg" src="images/blank.gif" alt="NYC">
         </div>
 
         <p>I was interning at a tech startup in Chelsea called Noom that makes health conscious mobile apps. I was helping redesign the experience behind their core offering, a premium weight loss app for iOS and Android.</p>
@@ -105,7 +105,7 @@
         <div class="sf-header date-img">
           <h2 class="date">Fall 2013 - SF</h2>
           <div class="underline rainbow"></div>
-          <img src="https://a2.muscache.com/locations/uploads/city/hero/20/0_4195_350_2532_hero_USA_SF_Skylines_05_mb.jpg" alt="SF">
+          <img class="lazy" data-src="images/sf.jpg" src="images/blank.gif" alt="SF">
         </div>
 
         <p>I was interning downtown as a web developer at the social networking company ifwe (formerly called Tagged). I focused on the front-end, helping build new features for Chat and Activity Feed.</p>
@@ -119,7 +119,7 @@
         <div class="austin-header date-img">
           <h2 class="date">Winter 2013 - Austin</h2>
           <div class="underline rainbow"></div>
-          <img src="http://www.tcainstitute.com/Images/iStock_000003243029LakeAustin.jpg" alt="Austin">
+          <img class="lazy" data-src="images/austin.jpg" src="images/blank.gif" alt="Austin">
         </div>
 
         <p>My first internship was as a software engineer at Bazaarvoice, a SaaS company providing ratings and reviews for e-commerce websites. I was helping rebuild their back-end in Node.js, and ironing out accessibility requirements on the front-end.</p>
@@ -133,7 +133,7 @@
         <div class="waterloo-header date-img">
           <h2 class="date">Fall 2011 - Waterloo</h2>
           <div class="underline rainbow"></div>
-          <img src="http://www.doublespacephoto.com/media/original/KPMB%20toronto%20architectural%20photography%20amanda%20large%20younes%20bounhar%20QNC%20Waterloo-1.jpg" alt="Waterloo">
+          <img class="lazy" data-src="images/waterloo.jpg" src="images/blank.gif" alt="Waterloo">
         </div>
 
         <p>I entered the University of Waterloo in the Management Engineering program. I found the content interesting, but the approach trying, so I transferred to Mathematics and have since taken classes from a variety of callings including Computer Science, Statistics, Optimization, and Algebra.</p>
