--- a/src/index.hbs
+++ b/src/index.hbs
@@ -62,7 +62,7 @@
 
         <div class="seattle-header date-img">
           <h2 class="date">Winter 2015 - Seattle</h2>
-          <div class="underline rainbow"></div>
+          <div class="underline"></div>
           <img class="lazy" data-src="images/seattle.jpg" src="images/blank.gif" alt="Seattle" />
         </div>
 
@@ -76,7 +76,7 @@
 
         <div class="hk-header date-img">
           <h2 class="date">Fall 2014 - Hong Kong</h2>
-          <div class="underline rainbow"></div>
+          <div class="underline"></div>
           <img class="lazy" data-src="images/hk.jpg" src="images/blank.gif" alt="Hong Kong">
         </div>
 
@@ -90,7 +90,7 @@
 
         <div class="nyc-header date-img">
           <h2 class="date darkgrey">Summer 2014 - NYC</h2>
-          <div class="underline rainbow"></div>
+          <div class="underline"></div>
           <img class="lazy" data-src="images/nyc.jpg" src="images/blank.gif" alt="NYC">
         </div>
 
@@ -104,7 +104,7 @@
 
         <div class="sf-header date-img">
           <h2 class="date">Fall 2013 - SF</h2>
-          <div class="underline rainbow"></div>
+          <div class="underline"></div>
           <img class="lazy" data-src="images/sf.jpg" src="images/blank.gif" alt="SF">
         </div>
 
@@ -118,7 +118,7 @@
 
         <div class="austin-header date-img">
           <h2 class="date">Winter 2013 - Austin</h2>
-          <div class="underline rainbow"></div>
+          <div class="underline"></div>
           <img class="lazy" data-src="images/austin.jpg" src="images/blank.gif" alt="Austin">
         </div>
 
@@ -132,7 +132,7 @@
 
         <div class="waterloo-header date-img">
           <h2 class="date">Fall 2011 - Waterloo</h2>
-          <div class="underline rainbow"></div>
+          <div class="underline"></div>
           <img class="lazy" data-src="images/waterloo.jpg" src="images/blank.gif" alt="Waterloo">
         </div>
 
