--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -402,7 +402,13 @@ b.colorful {
 }
 
 
-
+// # Fade Effect
+.fade {
+	.transition(opacity 2s ease-in-out);
+}
+.blank {
+	opacity: 0;
+}
 
 
 .map-container {
