--- a/src/index.hbs
+++ b/src/index.hbs
@@ -37,7 +37,7 @@
 
     <section class="container">
 
-      <article class="post">
+      <article class="post fade blank">
         <h1 class="post-title"><a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">Hey folks, I'm @jomrcr.</a></h1>
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
