--- a/src/index.hbs
+++ b/src/index.hbs
@@ -60,7 +60,7 @@
 
         <h2><a href="mailto:jomrcr@gmail.com?subject=Hello!" class="rainbow">Come say hello :)</a></h2>
 
-        <div class="seattle-header date-img">
+        <div class="seattle-header date-img fade blank">
           <h2 class="date">Winter 2015 - Seattle</h2>
           <div class="underline"></div>
           <img class="lazy" data-src="images/seattle.jpg" src="images/blank.gif" alt="Seattle" />
@@ -74,7 +74,7 @@
           <li><a href="https://github.com/joemercer/tether" target="_blank" class="rainbow">Family</a></li>
         </ul>
 
-        <div class="hk-header date-img">
+        <div class="hk-header date-img fade blank">
           <h2 class="date">Fall 2014 - Hong Kong</h2>
           <div class="underline"></div>
           <img class="lazy" data-src="images/hk.jpg" src="images/blank.gif" alt="Hong Kong">
@@ -88,7 +88,7 @@
           <li><a href="http://jomrcr.svbtle.com/notes-lean-analytics" target="_blank" class="rainbow">Analytics</a></li>
         </ul>
 
-        <div class="nyc-header date-img">
+        <div class="nyc-header date-img fade blank">
           <h2 class="date darkgrey">Summer 2014 - NYC</h2>
           <div class="underline"></div>
           <img class="lazy" data-src="images/nyc.jpg" src="images/blank.gif" alt="NYC">
@@ -102,7 +102,7 @@
           <li><a href="http://jomrcr.svbtle.com/notes-the-lean-startup" target="_blank" class="rainbow">Lean Startups</a></li>
         </ul>
 
-        <div class="sf-header date-img">
+        <div class="sf-header date-img fade blank">
           <h2 class="date">Fall 2013 - SF</h2>
           <div class="underline"></div>
           <img class="lazy" data-src="images/sf.jpg" src="images/blank.gif" alt="SF">
@@ -116,7 +116,7 @@
           <li><a href="https://github.com/joemercer/golden" target="_blank" class="rainbow">CSS</a></li>
         </ul>
 
-        <div class="austin-header date-img">
+        <div class="austin-header date-img fade blank">
           <h2 class="date">Winter 2013 - Austin</h2>
           <div class="underline"></div>
           <img class="lazy" data-src="images/austin.jpg" src="images/blank.gif" alt="Austin">
@@ -130,7 +130,7 @@
           <li>SXSW</li>
         </ul>
 
-        <div class="waterloo-header date-img">
+        <div class="waterloo-header date-img fade blank">
           <h2 class="date">Fall 2011 - Waterloo</h2>
           <div class="underline"></div>
           <img class="lazy" data-src="images/waterloo.jpg" src="images/blank.gif" alt="Waterloo">
