--- a/src/index.hbs
+++ b/src/index.hbs
@@ -35,9 +35,9 @@
       {{> icon class=''}}
     </header>
 
-    <section class="container">
+    <section class="content">
 
-      <article class="post fade blank">
+      <article class="post container fade blank">
         <h1 class="post-title"><a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">Hey folks, I'm @jomrcr.</a></h1>
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
@@ -149,19 +149,23 @@
     </section>
 
     <footer>
-      <p>Thanks for checking out my website. I hope you enjoyed it.</p>
+      <div class="container">
+        <p>Thanks for checking out my website. I hope you enjoyed it :)</p>
 
-      <p>If you'd like to chat, or make something awesome, tweet or shoot me an email.</p>
+        <p>If you'd like to chat, or make something awesome together, <a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">tweet</a> or <a href="mailto:jomrcr@gmail.com?subject=Hello!" class="rainbow">shoot me an email</a>. I'd love to hear from you!</p>
 
-      <p>I share moments on Twitter.</p>
-      <p>I share thoughts on Blog.</p>
-      <p>I share process on Github.</p>
-      <p>I share experiences on Github.</p>
+        <hr>
 
-      <p>Check out my RESUME</p>
+        <p>I also share...</p>
+        <ul>
+          <li>Moments on <a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">Twitter</a></li>
+          <li>Thoughts on my <a href="http://jomrcr.svbtle.com/" target="_blank" class="rainbow">Blog</a></li>
+          <li>Process on <a href="https://github.com/joemercer/" target="_blank" class="rainbow">Github</a></li>
+          <li>Experiences on <a href="https://www.linkedin.com/in/jomrcr" target="_blank" class="rainbow">LinkedIn</a></li>
+        </ul>
 
-      <p>Made with love in Seattle by Joe</p>
-
+        <h4 class="copyright">Made with &#9829; in Seattle by Joe. &#169; 2015 Joe Mercer.</h4>
+      </div>
     </footer>
 
     <script>
