--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -93,27 +93,6 @@ header {
 	}
 }
 
-footer {
-	// height: 200px;
-	width: 100%;
-	position: relative;
-	bottom: 0px;
-	z-index: 50;
-
-	background-color: @darkgrey;
-	color: @white;
-}
-
-
-.container {
-	// margin-top: 370px;
-}
-
-.mobile {
-
-}
-
-
 
 
 @black: #000;
@@ -125,10 +104,12 @@ footer {
 @padding: 10px + @border-width;
 @margin: 20px;
 
-article {
+.container {
 	max-width: @width;
 	margin: 0 auto;
+}
 
+article, header, footer {
 	-webkit-font-smoothing: antialiased;
 
 	h1, h2 {
@@ -169,18 +150,25 @@ article {
 	}
 
 	a {
+		font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
+		font-size: 20px;
+
 		color: inherit;
+		text-decoration: none;
   	border-bottom: 2px solid @lightgrey;
-  	text-decoration: none;
 	}
 
 	ul {
 	  list-style-type: disc;
 
-	  font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
 		font-weight: 400;
 		font-size: 17px;
 	  line-height: 1.5;
+
+	  a {
+	  	font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
+	  	font-size: 18px;
+	  }
 
 	  color: @darkgrey;
 
@@ -189,6 +177,53 @@ article {
 		padding-left: @padding + 20px;
 	  padding-right: 0px;
 
+	}
+}
+
+
+footer {
+	// height: 200px;
+	// width: 100%;
+	position: relative;
+	bottom: 0px;
+	z-index: 50;
+
+	background-color: #212121;
+
+	padding-top: 50px;
+	padding-bottom: @margin;
+
+	hr {
+		margin-top: 50px;
+		margin-bottom: 50px;
+	}
+
+	p, ul {
+		color: @lightgrey;
+		a {
+			border-color: @darkgrey;
+		}
+
+		li {
+			display: inline-block;
+			min-width: 50%;
+			float: left;
+		}
+	}
+
+	h4 {
+		font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
+		font-weight: 400;
+		font-size: 14px;
+	  line-height: 1.5;
+
+	  text-align: center;
+
+		color: @lightgrey;
+	}
+
+	.copyright {
+		margin-top: 150px;
 	}
 }
 
