--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -141,6 +141,10 @@ article, header, footer {
 		font-size: 18px;
 	  line-height: 1.5;
 
+	  a {
+	  	font-size: 20px;
+	  }
+
 	  color: @darkgrey;
 
 	  margin-top: @margin;
@@ -151,7 +155,6 @@ article, header, footer {
 
 	a {
 		font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
-		font-size: 20px;
 
 		color: inherit;
 		text-decoration: none;
@@ -166,7 +169,6 @@ article, header, footer {
 	  line-height: 1.5;
 
 	  a {
-	  	font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
 	  	font-size: 18px;
 	  }
 
