only request necessary fonts

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -5,16 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{title}}</title>
-    <meta name="description" content="{{description}}"/>
-    <link rel="author" content="{{joe.name}}" href="{{joe.twitter.href}}"/>
+    <title>@jomrcr | Joe Mercer</title>
+    <meta name="description" content="Joe Mercer - student of Mathematics at the University of Waterloo - data science intern at Facebook"/>
+    <link rel="author" content="Joe Mercer" href="https://twitter.com/jomrcr"/>
 
     <link href="fonts/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
