abstract data in hbs precomp

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -7,7 +7,7 @@
 
     <title>@jomrcr | Joe Mercer</title>
     <meta name="description" content="Joe Mercer - student of Mathematics at the University of Waterloo - data science intern at Facebook"/>
-    <link rel="author" content="Joe Mercer" href="https://twitter.com/jomrcr"/>
+    <link rel="author" content="Joe Mercer" href="{{twitter}}"/>
 
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 
@@ -35,7 +35,7 @@
     <section class="content">
 
       <article class="post container fade blank">
-        <h1 class="post-title"><a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">Hey folks, I'm @jomrcr.</a></h1>
+        <h1 class="post-title"><a href="{{twitter}}" target="_blank" class="rainbow">Hey folks, I'm @jomrcr.</a></h1>
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
@@ -55,7 +55,7 @@
 
         <p>I love travelling to new places, trying new things, and making new friends.</p>
 
-        <h2><a href="mailto:jomrcr@gmail.com?subject=Hello!" class="rainbow">Come say hello :)</a></h2>
+        <h2><a href="mailto:{{email}}?subject=Hello!" class="rainbow">Come say hello :)</a></h2>
 
         <div class="seattle-header date-img fade blank">
           <h2 class="date">Winter 2015 - Seattle</h2>
@@ -149,13 +149,13 @@
       <div class="container">
         <p>Thanks for checking out my website. I hope you enjoyed it :)</p>
 
-        <p>If you'd like to chat, or make something awesome together, <a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">tweet</a> or <a href="mailto:jomrcr@gmail.com?subject=Hello!" class="rainbow">shoot me an email</a>. I'd love to hear from you!</p>
+        <p>If you'd like to chat, or make something awesome together, <a href="{{twitter}}" target="_blank" class="rainbow">tweet</a> or <a href="mailto:{{email}}?subject=Hello!" class="rainbow">shoot me an email</a>. I'd love to hear from you!</p>
 
         <hr>
 
         <p>I also share...</p>
         <ul>
-          <li>Moments on <a href="https://twitter.com/jomrcr" target="_blank" class="rainbow">Twitter</a></li>
+          <li>Moments on <a href="{{twitter}}" target="_blank" class="rainbow">Twitter</a></li>
           <li>Thoughts on my <a href="http://jomrcr.svbtle.com/" target="_blank" class="rainbow">Blog</a></li>
           <li>Process on <a href="https://github.com/joemercer/" target="_blank" class="rainbow">Github</a></li>
           <li>Experiences on <a href="https://www.linkedin.com/in/jomrcr" target="_blank" class="rainbow">LinkedIn</a></li>
